# nutritionals

./: compose.dev.yaml  compose.prod.yaml
backend/: .dockerignore  .env.template  .gitignore  Dockerfile.dev  Dockerfile.prod  pyproject.toml  setup.cfg
backend/src/: manage.py
backend/src/common/: constants.py  mixins.py  models.py  renderers.py  utils.py
backend/src/core/: asgi.py  celery.py  urls.py  wsgi.py
backend/src/core/settings/: celery.py  development.py  django.py  production.py  scrapers.py  shared.py
backend/src/mylists/: admin.py  apps.py  exceptions.py  models.py  serializers.py  services.py  urls.py  views.py
backend/src/mylists/migrations/: 0001_initial.py  0002_mylist_unique_together_name_user.py
backend/src/mylists/services/: mylist.py  mylistitem.py
backend/src/products/: admin.py  exceptions.py  filters.py  models.py  pagination.py  serializers.py  services.py  tasks.py  urls.py  validators.py  views.py
backend/src/products/migrations/: 0001_initial.py  0002_alter_product_brand_alter_product_link_and_more.py  0003_product_pharmacy.py  0004_product_external_id.py  0005_alter_product_external_id.py  0006_alter_product_pharmacy.py  0007_alter_product_link.py  0008_product_image_link.py  0009_product_desciption.py  0010_alter_product_link.py  0011_rename_desciption_product_description.py  0012_alter_product_external_id.py  0013_product_unique_eid_pharmacy.py  0014_productdiscover.py  0015_pharmacy_productdiscover_pharmacy.py  0016_rename_product_productdeprecated.py  0017_brand.py  0018_brand_created_at_brand_updated_at_and_more.py  0019_productdiscover_product_last_scraped_at_and_more.py  0020_pharmacy_homepage_pharmacy_logo.py  0021_alter_pharmacy_homepage_alter_pharmacy_logo.py  0022_delete_productdeprecated.py  0023_alter_brand_options_alter_pharmacy_options_and_more.py  (+25 more)
backend/src/scrapers/: admin.py  models.py  services.py  tasks.py  validators.py
backend/src/users/: serializers.py  services.py  urls.py  views.py
(+149 files in other folders)
