[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4==4.13.4",
    "celery==5.5.3",
    "django==5.2",
    "django-celery-beat==2.8.1",
    "django-cors-headers==4.7.0",
    "django-environ==0.12.0",
    "djangorestframework==3.16.0",
    "djangorestframework-simplejwt==5.5.0",
    "drf-standardized-errors==0.14.1",
    "flower==2.0.1",
    "psycopg[binary,pool]==3.2.9",
    "redis==6.1.0",
    "requests==2.32.4",
]

[dependency-groups]
dev = [
    "django-extensions==4.1",
    "django-silk==5.4.0",
    "django-stubs==5.2.0",
    "djangorestframework-stubs==3.16.0",
    "flake8==7.2.0",
    "mypy==1.15.0",
    "types-requests==2.32.4.20250611",
    "werkzeug==3.1.3",
]
